--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,182 @@
 <!DOCTYPE html>
 
 <html lang="en">
-	Hello world!
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="Simple and secure journal app">
+
+		<title>Mini Diary</title>
+
+		<!-- CSS -->
+		<link rel="stylesheet" type="text/css" href="styles/styles.css">
+
+		<!-- Favicons (created using RealFaviconGenerator) -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+		<link rel="manifest" href="/favicons/site.webmanifest">
+		<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#4e8ad2">
+		<link rel="shortcut icon" href="/favicons/favicon.ico">
+		<meta name="msapplication-TileColor" content="#4e8ad2">
+		<meta name="msapplication-config" content="/favicons/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
+
+		<!-- Fathom Analytics -->
+		<script>
+			/* eslint-disable */
+			(function(f, a, t, h, o, m){
+				a[h]=a[h]||function(){
+					(a[h].q=a[h].q||[]).push(arguments)
+				};
+				o=f.createElement('script'),
+					m=f.getElementsByTagName('script')[0];
+				o.async=1; o.src=t; o.id='fathom-script';
+				m.parentNode.insertBefore(o,m)
+			})(document, window, '//analytics.samuelmeuli.com/tracker.js', 'fathom');
+			fathom('set', 'siteId', 'JHXPF');
+			fathom('trackPageview');
+			/* eslint-enable */
+		</script>
+	</head>
+
+	<body>
+		<header>
+			<img src="img/app-icon.svg" alt="App icon" width="150" />
+			<h1>Mini Diary</h1>
+			<p class="tagline">Simple and secure journal app</p>
+
+			<a
+				class="button download-link-mac"
+				href="https://github.com/samuelmeuli/mini-diary/releases"
+			>
+				<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+				macOS
+			</a>
+			<a
+				class="button download-link-windows"
+				href="https://github.com/samuelmeuli/mini-diary/releases"
+			>
+				<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+				Windows
+			</a>
+			<a
+				class="button download-link-linux"
+				href="https://github.com/samuelmeuli/mini-diary/releases"
+			>
+				<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+				Linux
+			</a>
+		</header>
+
+		<main>
+			<div class="screenshot-section-1">
+				<img src="img/screenshot-1.png" alt="Screenshot of diary screen" class="screenshot" />
+			</div>
+
+			<ul class="feature-list centered">
+				<li class="feature">
+					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smile"><circle cx="12" cy="12" r="10"></circle><path d="M8 14s1.5 2 4 2 4-2 4-2"></path><line x1="9" y1="9" x2="9.01" y2="9"></line><line x1="15" y1="9" x2="15.01" y2="9"></line></svg>
+					<div>
+						<h2>Simple and intuitive</h2>
+						<p>
+							Mini Diary features a beautiful and clean design with no distractions, letting you
+							fully focus on your writing.
+						</p>
+					</div>
+				</li>
+				<li class="feature">
+					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+					<div>
+						<h2>Private and secure</h2>
+						<p>
+							You're in control of your data. The journal is encrypted with a password and stored
+							locally on your device.
+						</p>
+					</div>
+				</li>
+				<li class="feature">
+					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-save"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13 7 13 7 21"></polyline><polyline points="7 3 7 8 15 8"></polyline></svg>
+					<div>
+						<h2>Portable</h2>
+						<p>
+							Mini Diary makes it easy to import your existing journal from other apps or export
+							your data in various file formats.
+						</p>
+					</div>
+				</li>
+				<li class="feature">
+					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg>
+					<div>
+						<h2>Completely free and open source</h2>
+						<p>
+							The app is and always will be free, and its source code can be viewed on
+							<a href="https://github.com/samuelmeuli/mini-diary">GitHub</a>.
+						</p>
+					</div>
+				</li>
+			</ul>
+
+			<div class="screenshot-section-2">
+				<img src="img/screenshot-2.png" alt="Screenshot of lock screen" class="screenshot" />
+				<img src="img/screenshot-3.png" alt="Screenshot of search" class="screenshot" />
+			</div>
+		</main>
+
+		<footer>
+			<div>
+				<a href="https://samuelmeuli.com">
+					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-code"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
+					Created by Samuel Meuli
+				</a>
+			</div>
+			<div>
+				<a href="https://feathericons.com">
+					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-feather"><path d="M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z"></path><line x1="16" y1="8" x2="2" y2="22"></line><line x1="17.5" y1="15" x2="9" y2="15"></line></svg>
+					Feather icons
+				</a>
+			</div>
+			<div>
+				<a href="https://github.com/samuelmeuli/mini-diary">
+					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+					Source code on GitHub
+				</a>
+			</div>
+		</footer>
+
+		<!-- Script for inserting download URLs -->
+		<script>
+			// Query latest release from GitHub API
+			window.fetch('https://api.github.com/repos/samuelmeuli/mini-diary/releases/latest')
+				.then(res => res.json())
+				.then((json) => {
+					if (!json.tag_name) {
+						console.error('Current release not found in GitHub API response');
+					} else {
+						// Parse name of latest version
+						const versionName = json.tag_name; // E.g. 'v1.0.0'
+						const version = versionName.substring(1); // E.g. '1.0.0'
+
+						// Build asset URLs
+						const urlBase = `https://github.com/samuelmeuli/mini-diary/releases/download/${versionName}`;
+						const downloadUrls = {
+							mac: `${urlBase}/mini-diary-${version}.dmg`,
+							windows: `${urlBase}/mini-diary-setup-${version}.exe`,
+							linux: `${urlBase}/mini-diary_${version}_amd64.snap`
+						};
+
+						// Insert asset URLs in site
+						Object.keys(downloadUrls).forEach((platform) => {
+							Array.from(document.getElementsByClassName(`download-link-${platform}`))
+								.forEach((tag) => {
+									tag.setAttribute('href', downloadUrls[platform]);
+								});
+						});
+					}
+				})
+				.catch((err) => {
+					console.error(`GitHub API error: ${err}`);
+				});
+		</script>
+	</body>
 </html>
