Use PNG icon on website

--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,7 @@
 
 	<body>
 		<header>
-			<img src="img/app-icon.svg" alt="App icon" width="150" />
+			<img src="img/app-icon.png" alt="App icon" width="150" />
 			<h1>Mini Diary</h1>
 			<p class="tagline">Simple and secure journal app</p>
 
