--- a/website/index.html
+++ b/website/index.html
@@ -70,7 +70,7 @@
 				</a>
 			</div>
 			<a
-				class="all-formats-link"
+				class="small-text"
 				href="https://github.com/samuelmeuli/mini-diary/releases/latest"
 			>
 				All download formats
@@ -137,17 +137,20 @@
 					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-code"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
 					Created by Samuel Meuli
 				</a>
-			</div>
-			<div>
+				<br>
 				<a href="https://feathericons.com">
 					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-feather"><path d="M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z"></path><line x1="16" y1="8" x2="2" y2="22"></line><line x1="17.5" y1="15" x2="9" y2="15"></line></svg>
 					Feather icons
 				</a>
-			</div>
-			<div>
+				<br>
 				<a href="https://github.com/samuelmeuli/mini-diary">
 					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
 					Source code on GitHub
+				</a>
+			</div>
+			<div class="terms">
+				<a href="https://github.com/samuelmeuli/mini-diary/blob/master/PRIVACY.md" class="small-text">
+					Privacy policy
 				</a>
 			</div>
 		</footer>
