--- a/website/index.html
+++ b/website/index.html
@@ -48,32 +48,20 @@
 
 			<div>
 				<a
-					class="button download-link-mac"
-					href="https://github.com/samuelmeuli/mini-diary/releases"
+					id="download-link"
+					class="button"
+					href="https://github.com/samuelmeuli/mini-diary/releases/latest"
 				>
 					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-					macOS
-				</a>
-				<a
-					class="button download-link-windows"
-					href="https://github.com/samuelmeuli/mini-diary/releases"
-				>
-					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-					Windows
-				</a>
-				<a
-					class="button download-link-linux"
-					href="https://github.com/samuelmeuli/mini-diary/releases"
-				>
-					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-					Linux
+					Download
 				</a>
 			</div>
 			<a
+				id="all-platforms-link"
 				class="small-text"
 				href="https://github.com/samuelmeuli/mini-diary/releases/latest"
 			>
-				All download formats
+				Download for different platform
 			</a>
 		</header>
 
@@ -138,11 +126,6 @@
 					Created by Samuel Meuli
 				</a>
 				<br>
-				<a href="https://feathericons.com">
-					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-feather"><path d="M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z"></path><line x1="16" y1="8" x2="2" y2="22"></line><line x1="17.5" y1="15" x2="9" y2="15"></line></svg>
-					Feather icons
-				</a>
-				<br>
 				<a href="https://github.com/samuelmeuli/mini-diary">
 					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
 					Source code on GitHub
@@ -155,39 +138,7 @@
 			</div>
 		</footer>
 
-		<!-- Script for inserting download URLs -->
-		<script>
-			// Query latest release from GitHub API
-			window.fetch('https://api.github.com/repos/samuelmeuli/mini-diary/releases/latest')
-				.then(res => res.json())
-				.then((json) => {
-					if (!json.tag_name) {
-						console.error('Current release not found in GitHub API response');
-					} else {
-						// Parse name of latest version
-						const versionName = json.tag_name; // E.g. 'v1.0.0'
-						const version = versionName.substring(1); // E.g. '1.0.0'
-
-						// Build asset URLs
-						const urlBase = `https://github.com/samuelmeuli/mini-diary/releases/download/${versionName}`;
-						const downloadUrls = {
-							mac: `${urlBase}/mini-diary-${version}.dmg`,
-							windows: `${urlBase}/mini-diary-setup-${version}.exe`,
-							linux: `${urlBase}/mini-diary-${version}-x86_64.AppImage`
-						};
-
-						// Insert asset URLs in site
-						Object.keys(downloadUrls).forEach((platform) => {
-							Array.from(document.getElementsByClassName(`download-link-${platform}`))
-								.forEach((tag) => {
-									tag.setAttribute('href', downloadUrls[platform]);
-								});
-						});
-					}
-				})
-				.catch((err) => {
-					console.error(`GitHub API error: ${err}`);
-				});
-		</script>
+		<!-- Detect platform and update download URL -->
+		<script src="index.js"></script>
 	</body>
 </html>
