--- a/website/index.html
+++ b/website/index.html
@@ -2,40 +2,43 @@
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="Simple and secure journal app">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="description" content="Simple and secure journal app" />
 
 		<title>Mini Diary</title>
 
 		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="styles/styles.css">
+		<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 
 		<!-- Favicons (created using RealFaviconGenerator) -->
-		<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-		<link rel="manifest" href="/favicons/site.webmanifest">
-		<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#4e8ad2">
-		<link rel="shortcut icon" href="/favicons/favicon.ico">
-		<meta name="msapplication-TileColor" content="#4e8ad2">
-		<meta name="msapplication-config" content="/favicons/browserconfig.xml">
-		<meta name="theme-color" content="#ffffff">
+		<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
+		<link rel="manifest" href="/favicons/site.webmanifest" />
+		<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#4e8ad2" />
+		<link rel="shortcut icon" href="/favicons/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#4e8ad2" />
+		<meta name="msapplication-config" content="/favicons/browserconfig.xml" />
+		<meta name="theme-color" content="#ffffff" />
 
 		<!-- Fathom Analytics -->
 		<script>
 			/* eslint-disable */
-			(function(f, a, t, h, o, m){
-				a[h]=a[h]||function(){
-					(a[h].q=a[h].q||[]).push(arguments)
-				};
-				o=f.createElement('script'),
-					m=f.getElementsByTagName('script')[0];
-				o.async=1; o.src=t; o.id='fathom-script';
-				m.parentNode.insertBefore(o,m)
-			})(document, window, '//analytics.samuelmeuli.com/tracker.js', 'fathom');
-			fathom('set', 'siteId', 'JHXPF');
-			fathom('trackPageview');
+			(function(f, a, t, h, o, m) {
+				a[h] =
+					a[h] ||
+					function() {
+						(a[h].q = a[h].q || []).push(arguments);
+					};
+				(o = f.createElement("script")), (m = f.getElementsByTagName("script")[0]);
+				o.async = 1;
+				o.src = t;
+				o.id = "fathom-script";
+				m.parentNode.insertBefore(o, m);
+			})(document, window, "//analytics.samuelmeuli.com/tracker.js", "fathom");
+			fathom("set", "siteId", "JHXPF");
+			fathom("trackPageview");
 			/* eslint-enable */
 		</script>
 	</head>
@@ -52,7 +55,21 @@
 					class="button"
 					href="https://github.com/samuelmeuli/mini-diary/releases/latest"
 				>
-					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="25"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-download"
+					>
+						<path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+						<polyline points="7 10 12 15 17 10"></polyline>
+						<line x1="12" y1="15" x2="12" y2="3"></line>
+					</svg>
 					Download
 				</a>
 			</div>
@@ -72,7 +89,22 @@
 
 			<ul class="feature-list centered">
 				<li class="feature">
-					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smile"><circle cx="12" cy="12" r="10"></circle><path d="M8 14s1.5 2 4 2 4-2 4-2"></path><line x1="9" y1="9" x2="9.01" y2="9"></line><line x1="15" y1="9" x2="15.01" y2="9"></line></svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="60"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-smile"
+					>
+						<circle cx="12" cy="12" r="10"></circle>
+						<path d="M8 14s1.5 2 4 2 4-2 4-2"></path>
+						<line x1="9" y1="9" x2="9.01" y2="9"></line>
+						<line x1="15" y1="9" x2="15.01" y2="9"></line>
+					</svg>
 					<div>
 						<h2>Simple and intuitive</h2>
 						<p>
@@ -82,7 +114,20 @@
 					</div>
 				</li>
 				<li class="feature">
-					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="60"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-lock"
+					>
+						<rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+						<path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+					</svg>
 					<div>
 						<h2>Private and secure</h2>
 						<p>
@@ -92,7 +137,21 @@
 					</div>
 				</li>
 				<li class="feature">
-					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-save"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13 7 13 7 21"></polyline><polyline points="7 3 7 8 15 8"></polyline></svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="60"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-save"
+					>
+						<path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
+						<polyline points="17 21 17 13 7 13 7 21"></polyline>
+						<polyline points="7 3 7 8 15 8"></polyline>
+					</svg>
 					<div>
 						<h2>Portable</h2>
 						<p>
@@ -102,7 +161,23 @@
 					</div>
 				</li>
 				<li class="feature">
-					<svg xmlns="http://www.w3.org/2000/svg" width="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="60"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-gift"
+					>
+						<polyline points="20 12 20 22 4 22 4 12"></polyline>
+						<rect x="2" y="7" width="20" height="5"></rect>
+						<line x1="12" y1="22" x2="12" y2="7"></line>
+						<path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path>
+						<path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path>
+					</svg>
 					<div>
 						<h2>Completely free and open source</h2>
 						<p>
@@ -122,17 +197,47 @@
 		<footer>
 			<div>
 				<a href="https://samuelmeuli.com">
-					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-code"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="25"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-code"
+					>
+						<polyline points="16 18 22 12 16 6"></polyline>
+						<polyline points="8 6 2 12 8 18"></polyline>
+					</svg>
 					Created by Samuel Meuli
 				</a>
-				<br>
+				<br />
 				<a href="https://github.com/samuelmeuli/mini-diary">
-					<svg xmlns="http://www.w3.org/2000/svg" width="25" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="25"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-github"
+					>
+						<path
+							d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+						></path>
+					</svg>
 					Source code on GitHub
 				</a>
 			</div>
 			<div class="terms">
-				<a href="https://github.com/samuelmeuli/mini-diary/blob/master/PRIVACY.md" class="small-text">
+				<a
+					href="https://github.com/samuelmeuli/mini-diary/blob/master/PRIVACY.md"
+					class="small-text"
+				>
 					Privacy policy
 				</a>
 			</div>
