Remove references to MAS version

--- a/website/index.html
+++ b/website/index.html
@@ -229,25 +229,25 @@
 					<li>
 						<p class="faq-question">How can I change my password?</p>
 						<p class="faq-answer">
-							Unlock your diary and select Mini Diary → Preferences in the menu bar. There, you can
-							modify your diary's password.
+							Unlock your diary and select Mini Diary → Preferences in the menu bar. You can edit
+							your password here.
 						</p>
 					</li>
 					<li>
 						<p class="faq-question">I forgot my password. How can I reset it?</p>
 						<p class="faq-answer">
-							Local encryption is what makes Mini Diary secure. You can only access your data with
-							your password, and there is no way to reset it. It is therefore very important that
-							you write down your password when creating the diary.
+							Your diary can only be read with your password, and resetting it isn't possible. This
+							type of local encryption is what makes Mini Diary secure. It's therefore very
+							important that you write down your password when creating a diary.
 						</p>
 					</li>
 					<li>
 						<p class="faq-question">How can I change where my diary is stored?</p>
 						<p class="faq-answer">
-							Unlock your diary and select Mini Diary → Preferences in the menu bar. There, you can
-							change the location of your diary file. Please note that this option is not available
-							in the Mac App Store version (due to sandboxing). You can download the
-							<a class="download-mac">non-sandboxed version</a> to get this feature on macOS.
+							Unlock your diary and select Mini Diary → Preferences in the menu bar. You can change
+							the location of your diary file here. (Please note that due to sandboxing, this option
+							is not available in the Mac App Store version. You can download the
+							<a class="download-mac">non-sandboxed version</a> to get this feature on macOS.)
 						</p>
 					</li>
 					<li>
@@ -256,6 +256,19 @@
 							Mini Diary stores your journal in an encrypted file. If you change the location of
 							that file to a cloud folder like Dropbox or Google Drive, it will automatically become
 							accessible on all other devices with the same setup.
+						</p>
+					</li>
+					<li>
+						<p class="faq-question">
+							Why is the Mac App Store version not receiving updates anymore?
+						</p>
+						<p class="faq-answer">
+							Since November 2019, Apple no longer accepts apps based on the Electron framework in
+							its App Store. That's why the App Store version of Mini Diary unfortunately cannot be
+							updated anymore. Mac users can uninstall the App Store version and reinstall the app
+							from
+							<a class="download-mac">here</a>. Your diary entries will be carried over
+							automatically.
 						</p>
 					</li>
 				</ul>
