--- a/website/index.html
+++ b/website/index.html
@@ -16,11 +16,11 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
 		<link rel="manifest" href="/favicons/site.webmanifest" />
-		<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#4e8ad2" />
+		<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#649ad8" />
 		<link rel="shortcut icon" href="/favicons/favicon.ico" />
-		<meta name="msapplication-TileColor" content="#4e8ad2" />
+		<meta name="msapplication-TileColor" content="#649ad8" />
 		<meta name="msapplication-config" content="/favicons/browserconfig.xml" />
-		<meta name="theme-color" content="#ffffff" />
+		<meta name="theme-color" content="#649ad8" />
 
 		<!-- Fathom Analytics -->
 		<script>
